--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </section>
 
     <section class="main-content">
+      <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
       <p></p>
 
       <footer class="site-footer">
