--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <body>
-    <meta charset="UTF-8">
-    <title>Instamotor Bel</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </body>
-  </html>
+<html>
+<head><title>Instamotor Bel</title></head>
+<style>
+body, html { margin: 0px; padding: 0px; height: 100%; font-family: Arial, sans-serif; font-size: 9pt; }
+table { width: 100%; height: 100%; }
+td { text-align: center; vertical-align: middle; }
+span { color: #d0d0d0; }
+div { position: absolute; left: 0px; bottom: 5%; width: 100%; text-align: center; }
+a { color: #007ab1; }
+</style>
+<body>
+<div><a href="mailto:info@wookot.com">info@wookot.com</a></div>
+<table><tr><td><img src="tobeornot.png" width="848" height="100"></td></tr></table>
+</body>
+</html>
