--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@ div { position: absolute; left: 0px; bottom: 5%; width: 100%; text-align: center
 a { color: #007ab1; }
 </style>
 <body>
-<div><a href="mailto:info@wookot.com">info@wookot.com</a></div>
-<table><tr><td><img src="tobeornot.png" width="848" height="100"></td></tr></table>
+<table><tr><td>INSTAMOTOR BEL</td></tr></table>
 </body>
 </html>
