--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
 <head><title>Instamotor Bel</title></head>
-<style>
-body, html { margin: 0px; padding: 0px; height: 100%; font-family: Arial, sans-serif; font-size: 9pt; }
-table { width: 100%; height: 100%; }
-td { text-align: center; vertical-align: middle; }
-span { color: #d0d0d0; }
-div { position: absolute; left: 0px; bottom: 5%; width: 100%; text-align: center; }
-a { color: #007ab1; }
-</style>
-<body>
-<table><tr><td>INSTAMOTOR BEL</td></tr></table>
-</body>
+<h1>&nbsp;</h1>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="http://www.instamotor.by/logo.png" alt="logo" width="617" height="385" /></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h4 style="text-align: center;"><a title="mail" href="mailto:info@instamotor.by" target="_blank">info@instamotor.by</a></h4>
 </html>
