--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
-<p><img src="http://www.instamotor.by/logo_email.png" alt="" width="49" height="49" /></p>
-<p>Instamotor Bel<br />Software development</p>
-<p>Contacts:</p>
-<p><a href="mailto:info@instamotor.by">info@instamotor.by</a><br />+375172477211<br />+375297752858<br />Minsk, Belarus</p>
+<html><head>
+    <title>instamotor dot by</title>
+<style>
+body {
+  font-family: Monospace;
+  font-size: 13px;
+}
+</style>
+  <style id="style-1-cropbar-clipper">/* Copyright 2016 Instamotor Bel LLC. All rights reserved. */
+.en-markup-crop-options {
+    top: 18px !important;
+    left: 50% !important;
+    margin-left: -100px !important;
+    width: 200px !important;
+    border: 2px rgba(255,255,255,.38) solid !important;
+    border-radius: 4px !important;
+}
+
+.en-markup-crop-options div div:first-of-type {
+    margin-left: 0px !important;
+}
+</style><style type="text/css">/* This is not a zero-length file! */</style></head>
+  <body>
+    <p><img src="http://www.instamotor.by/logo_email.png" alt="" width="49" height="49" /></p>
+    <p>
+      Instamotor Bel<br>
+      Software Development<br>
+      Minsk, Belarus<br>
+    </p>
+
+    <p>
+      Contacts:<br>
+      -&gt; <a href="mailto:info@instamotor.by">info@instamotor.by</a><br>
+      -&gt; +375)17)2477211<br>
+      -&gt; +375(29)7752858<br>
+    </p>
+</body></html>
